fix: Truncated breadcrumb in subsection page

--- a/src/library-authoring/section-subsections/index.scss
+++ b/src/library-authoring/section-subsections/index.scss
@@ -36,3 +36,11 @@
     padding: 0;
   }
 }
+
+.subsection-breadcrumb {
+  max-width: 700px;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
